--- a/Client_App/Views/Forms/Forms1/Form_15.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_15.axaml
@@ -217,7 +217,7 @@
 						<TextBlock>Сведения об операции</TextBlock>
 					</Border>
 					<Border Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="7">
-						<TextBlock>Сведения из паспорта на изделие из обедненного урана</TextBlock>
+						<TextBlock>Сведения об отработавших закрытых источниках ионизируещего излучения</TextBlock>
 					</Border>
 					<Border Grid.Column="10" Grid.Row="0" Grid.ColumnSpan="1">
 						<TextBlock></TextBlock>
