--- a/Client_App/Views/Forms/Forms1/Form_16.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_16.axaml
@@ -33,19 +33,17 @@
 
 	<Grid>
 		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="*" MinHeight="175"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-		</Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+            <RowDefinition Height="*" MinHeight="175"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
 		<Expander Grid.Row ="0"
-				  IsExpanded="True">
-			<Expander.Header>
-				Скрыть/Раскрыть верхнюю панель
-			</Expander.Header>
-			<WrapPanel Classes="header">
+				  IsExpanded="True" 
+                  Header="Скрыть/Раскрыть верхнюю панель">
+            <WrapPanel Classes="header">
 				<Border Classes="borderContainer">
 					<Grid RowDefinitions="Auto,*,Auto">
 						<Button Command="{Binding SwitchToNextReport}"
@@ -201,36 +199,40 @@
 				</Grid.ContextMenu>
 				<Grid Classes="tableHeader" Grid.Row="0"
 					  Width="{Binding ElementName=dataGrid.Width}"
+                      ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*"
 					  RowDefinitions="Auto,Auto">
-					<interactivity:Interaction.Behaviors>
+
+                    <interactivity:Interaction.Behaviors>
 						<local:ColumnWidthSyncBehavior	SourceDataGrid="{Binding ElementName=dataGrid}"/>
 					</interactivity:Interaction.Behaviors>
+
 					<!--Первый уровень заголовков-->
-					<Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="1">
+
+					<Border Grid.Column="0" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Сведения об операции</TextBlock>
 					</Border>
-					<Border Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="3" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="4" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="4" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="5" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Количество</TextBlock>
 					</Border>
-					<Border Grid.Column="7" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="7" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="8" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="8" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="9" Grid.Row="0" Grid.ColumnSpan="4">
 						<TextBlock>Суммарная активность, Бк</TextBlock>
 					</Border>
-					<Border Grid.Column="13" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="13" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="14" Grid.Row="0" Grid.ColumnSpan="3">
@@ -242,22 +244,24 @@
 					<Border Grid.Column="19" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Прибор (установка), УКТ или иная упаковка</TextBlock>
 					</Border>
-					<Border Grid.Column="21" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="21" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="22" Grid.Row="0" Grid.ColumnSpan="3">
 						<TextBlock>УКТ, упаковка или иная учетная единица</TextBlock>
 					</Border>
-					<Border Grid.Column="25" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="25" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="26" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="26" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="27" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="27" Grid.Row="0">
 						<TextBlock>Документ</TextBlock>
 					</Border>
+
 					<!--Второй уровень заголовков-->
+
 					<Border Grid.Column="0" Grid.Row="1">
 						<TextBlock>№ п/п</TextBlock>
 					</Border>
@@ -343,6 +347,7 @@
 						<TextBlock>номер</TextBlock>
 					</Border>
 				</Grid>
+
 				<DataGrid
 					Grid.Row="1"
 					Classes="table"
@@ -350,12 +355,14 @@
 					x:Name="dataGrid"
 					Items="{Binding FormList}"
 					SelectedItem="{Binding SelectedForm}">
-					<interactivity:Interaction.Behaviors>
+
+                    <interactivity:Interaction.Behaviors>
 						<local:DataGridDragSelectionBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DataGridDoubleClickBehavior/>
 						<local:DeselectDataGridOnClickOutsideBehavior/>
 					</interactivity:Interaction.Behaviors>
+
 					<DataGrid.Columns>
 
 						<DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
@@ -408,7 +415,8 @@
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding OperationDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
-															SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+															SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, 
+                                                            Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -610,7 +618,8 @@
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding ActivityMeasurementDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
-															SelectedDate="{Binding ActivityMeasurementDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+															SelectedDate="{Binding ActivityMeasurementDate.Value, Mode=TwoWay, 
+                                                            Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -668,7 +677,8 @@
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding DocumentDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
-															SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+															SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, 
+                                                            Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -909,11 +919,9 @@
 		</Border>
 		<Expander Grid.Row ="3"
 				  IsExpanded="True"
-				  ExpandDirection="Up">
-			<Expander.Header>
-				Скрыть/Раскрыть нижнюю панель
-			</Expander.Header>
-			<Border  Classes="notesContainer">
+				  ExpandDirection="Up" 
+                  Header="Скрыть/Раскрыть нижнюю панель">
+            <Border Classes="notesContainer">
 				<StackPanel>
 					<StackPanel.ContextMenu>
 						<ContextMenu>
@@ -936,11 +944,13 @@
 							  x:CompileBindings="True"
 							  Items="{Binding NoteList}"
 							  SelectedItem="{Binding SelectedNote}">
-						<interactivity:Interaction.Behaviors>
+
+                        <interactivity:Interaction.Behaviors>
 							<local:DataGridDoubleClickBehavior/>
 							<local:DataGridDragSelectionBehavior/>
 							<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
 						</interactivity:Interaction.Behaviors>
+
 						<DataGrid.Columns>
 							<DataGridTemplateColumn Header="№ строки" Width="80">
 								<DataGridTemplateColumn.CellTemplate>
@@ -971,6 +981,5 @@
 				</StackPanel>
 			</Border>
 		</Expander>
-
 	</Grid>
 </Window>
