--- a/Client_App/Views/Forms/Forms1/Form_17.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_17.axaml
@@ -33,19 +33,17 @@
 
 	<Grid>
 		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="*" MinHeight="175"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-		</Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+            <RowDefinition Height="*" MinHeight="175"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
 		<Expander Grid.Row ="0"
-				  IsExpanded="True">
-			<Expander.Header>
-				Скрыть/Раскрыть верхнюю панель
-			</Expander.Header>
-			<WrapPanel Classes="header">
+				  IsExpanded="True" 
+                  Header="Скрыть/Раскрыть верхнюю панель">
+            <WrapPanel Classes="header">
 				<Border Classes="borderContainer">
 					<Grid RowDefinitions="Auto,*,Auto">
 						<Button Command="{Binding SwitchToNextReport}"
@@ -97,7 +95,6 @@
 							<Button Margin="5" Command="{Binding CheckForm}">Проверить</Button>
 							<Button Margin="5" Command="{Binding SaveReport}">Сохранить</Button>
 						</StackPanel>
-
 						
 					</Grid>
 				</Border>
@@ -202,11 +199,15 @@
 				</Grid.ContextMenu>
 				<Grid Classes="tableHeader" Grid.Row="0"
 					  Width="{Binding ElementName=dataGrid.Width}"
+                      ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*"
 					  RowDefinitions="Auto,Auto,Auto">
-					<interactivity:Interaction.Behaviors>
+
+                    <interactivity:Interaction.Behaviors>
 						<local:ColumnWidthSyncBehavior	SourceDataGrid="{Binding ElementName=dataGrid}"/>
 					</interactivity:Interaction.Behaviors>
+
 					<!--Первый уровень заголовков-->
+
 					<Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3">
 						<TextBlock></TextBlock>
 					</Border>
@@ -225,44 +226,46 @@
 					<Border Grid.Column="20" Grid.Row="0" Grid.ColumnSpan="10">
 						<TextBlock>Сведения РАО</TextBlock>
 					</Border>
-					<Border Grid.Column="30" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="30" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="31" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="31" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="32" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="32" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
+
 					<!--Второй уровень заголовков-->
-					<Border Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="1">
+
+					<Border Grid.Column="0" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2">
 						<TextBlock>Сведения об операции</TextBlock>
 					</Border>
-					<Border Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="3" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="4" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="4" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="5" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="5" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="6" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="6" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="7" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="7" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="8" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="8" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="9" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="9" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="10" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="10" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="11" Grid.Row="1" Grid.ColumnSpan="2">
@@ -277,37 +280,39 @@
 					<Border Grid.Column="18" Grid.Row="1" Grid.ColumnSpan="2">
 						<TextBlock>Путь хранения</TextBlock>
 					</Border>
-					<Border Grid.Column="20" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="20" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="21" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="21" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="22" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="22" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="23" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="23" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="24" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="24" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="25" Grid.Row="1" Grid.ColumnSpan="4">
 						<TextBlock>Суммарная активность</TextBlock>
 					</Border>
-					<Border Grid.Column="29" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="29" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="30" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="30" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="31" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="31" Grid.Row="1">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="32" Grid.Row="1" Grid.ColumnSpan="1">
+					<Border Grid.Column="32" Grid.Row="1">
 						<TextBlock>Договор</TextBlock>
 					</Border>
+
 					<!--Третий уровень заголовков-->
+
 					<Border Grid.Column="0" Grid.Row="2">
 						<TextBlock>№ п/п</TextBlock>
 					</Border>
@@ -408,6 +413,7 @@
 						<TextBlock>номер</TextBlock>
 					</Border>
 				</Grid>
+
 				<DataGrid
 					Grid.Row="1"
 					Classes="table"
@@ -415,12 +421,14 @@
 					x:Name="dataGrid"
 					Items="{Binding FormList}"
 					SelectedItem="{Binding SelectedForm}">
-					<interactivity:Interaction.Behaviors>
+
+                    <interactivity:Interaction.Behaviors>
 						<local:DataGridDragSelectionBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DataGridDoubleClickBehavior/>
 						<local:DeselectDataGridOnClickOutsideBehavior/>
 					</interactivity:Interaction.Behaviors>
+
 					<DataGrid.Columns>
 
 						<DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
@@ -473,7 +481,8 @@
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding OperationDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
-															SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+															SelectedDate="{Binding OperationDate.Value, Mode=TwoWay, 
+                                                            Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -567,7 +576,8 @@
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding FormingDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
-															SelectedDate="{Binding FormingDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+															SelectedDate="{Binding FormingDate.Value, Mode=TwoWay, 
+                                                            Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -715,7 +725,8 @@
 									<Grid ColumnDefinitions="*,Auto">
 										<TextBox Grid.Column="0" Text="{Binding DocumentDate.Value, Mode=TwoWay}"/>
 										<CalendarDatePicker Classes="buttonOnly"  Grid.Column="1"
-															SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, Converter={StaticResource DateConverter}}"/>
+															SelectedDate="{Binding DocumentDate.Value, Mode=TwoWay, 
+                                                            Converter={StaticResource DateConverter}}"/>
 									</Grid>
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
@@ -1063,11 +1074,9 @@
 		</Border>
 		<Expander Grid.Row ="3"
 				  IsExpanded="True"
-				  ExpandDirection="Up">
-			<Expander.Header>
-				Скрыть/Раскрыть нижнюю панель
-			</Expander.Header>
-			<Border Classes="notesContainer">
+				  ExpandDirection="Up" 
+                  Header="Скрыть/Раскрыть нижнюю панель">
+            <Border Classes="notesContainer">
 				<StackPanel>
 					<StackPanel.ContextMenu>
 						<ContextMenu x:CompileBindings="True" x:DataType="vm:Form_17VM">
@@ -1086,15 +1095,18 @@
 						</ContextMenu>
 					</StackPanel.ContextMenu>
 					<TextBlock Margin="5">Примечания</TextBlock>
+
 					<DataGrid Classes="notesTable"
 							  x:CompileBindings="True"
 							  Items="{Binding NoteList}"
 							  SelectedItem="{Binding SelectedNote}">
-						<interactivity:Interaction.Behaviors>
+
+                        <interactivity:Interaction.Behaviors>
 							<local:DataGridDoubleClickBehavior/>
 							<local:DataGridDragSelectionBehavior/>
-							<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
+							<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}"/>
 						</interactivity:Interaction.Behaviors>
+
 						<DataGrid.Columns>
 							<DataGridTemplateColumn Header="№ строки" Width="80">
 								<DataGridTemplateColumn.CellTemplate>
@@ -1125,6 +1137,5 @@
 				</StackPanel>
 			</Border>
 		</Expander>
-
 	</Grid>
 </Window>
