--- a/Client_App/Views/Forms/Forms1/Form_15.axaml
+++ b/Client_App/Views/Forms/Forms1/Form_15.axaml
@@ -33,19 +33,17 @@
 
 	<Grid>
 		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="*" MinHeight="175"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-			<RowDefinition Height="Auto"></RowDefinition>
-		</Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+            <RowDefinition Height="*" MinHeight="175"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
 		<Expander Grid.Row ="0"
-				  IsExpanded="True">
-			<Expander.Header>
-				Скрыть/Раскрыть верхнюю панель
-			</Expander.Header>
-			<WrapPanel Classes="header">
+				  IsExpanded="True" 
+                  Header="Скрыть/Раскрыть верхнюю панель">
+            <WrapPanel Classes="header">
 				<Border Classes="borderContainer">
 					<Grid RowDefinitions="Auto,*,Auto">
 						<Button Command="{Binding SwitchToNextReport}"
@@ -205,12 +203,16 @@
 				</Grid.ContextMenu>
 				<Grid Classes="tableHeader" Grid.Row="0"
 					  Width="{Binding ElementName=dataGrid.Width}"
-					  RowDefinitions="Auto,Auto">
-					<interactivity:Interaction.Behaviors>
+                      ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*" 
+                      RowDefinitions="Auto,Auto" >
+
+                    <interactivity:Interaction.Behaviors>
 						<local:ColumnWidthSyncBehavior	SourceDataGrid="{Binding ElementName=dataGrid}"/>
 					</interactivity:Interaction.Behaviors>
+
 					<!--Первый уровень заголовков-->
-					<Border Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="1">
+
+					<Border Grid.Column="0" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="1" Grid.Row="0" Grid.ColumnSpan="2">
@@ -219,7 +221,7 @@
 					<Border Grid.Column="3" Grid.Row="0" Grid.ColumnSpan="7">
 						<TextBlock>Сведения из паспорта на изделие из обедненного урана</TextBlock>
 					</Border>
-					<Border Grid.Column="10" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="10" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
 					<Border Grid.Column="11" Grid.Row="0" Grid.ColumnSpan="3">
@@ -234,19 +236,21 @@
 					<Border Grid.Column="19" Grid.Row="0" Grid.ColumnSpan="2">
 						<TextBlock>Пункт хранения</TextBlock>
 					</Border>
-					<Border Grid.Column="21" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="21" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="22" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="22" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="23" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="23" Grid.Row="0">
 						<TextBlock></TextBlock>
 					</Border>
-					<Border Grid.Column="24" Grid.Row="0" Grid.ColumnSpan="1">
+					<Border Grid.Column="24" Grid.Row="0">
 						<TextBlock>Договор</TextBlock>
 					</Border>
+
 					<!--Второй уровень заголовков-->
+
 					<Border Grid.Column="0" Grid.Row="1">
 						<TextBlock>№ п/п</TextBlock>
 					</Border>
@@ -323,6 +327,7 @@
 						<TextBlock>номер</TextBlock>
 					</Border>
 				</Grid>
+
 				<DataGrid
 					Grid.Row="1"
 					Classes="table"
@@ -330,12 +335,14 @@
 					x:Name="dataGrid"
 					Items="{Binding FormList}"
 					SelectedItem="{Binding SelectedForm}">
-					<interactivity:Interaction.Behaviors>
+
+                    <interactivity:Interaction.Behaviors>
 						<local:DataGridDragSelectionBehavior/>
 						<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedForms, Mode=TwoWay}" />
 						<local:DataGridDoubleClickBehavior/>
 						<local:DeselectDataGridOnClickOutsideBehavior/>
 					</interactivity:Interaction.Behaviors>
+
 					<DataGrid.Columns>
 
 						<DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
@@ -838,11 +845,9 @@
 		</Border>
 		<Expander Grid.Row ="3"
 				  IsExpanded="True"
-				  ExpandDirection="Up">
-			<Expander.Header>
-				Скрыть/Раскрыть нижнюю панель
-			</Expander.Header>
-			<Border Classes="notesContainer">
+				  ExpandDirection="Up" 
+                  Header="Скрыть/Раскрыть нижнюю панель">
+            <Border Classes="notesContainer">
 				<StackPanel>
 					<StackPanel.ContextMenu>
 						<ContextMenu x:CompileBindings="True" x:DataType="vm:Form_15VM">
@@ -865,11 +870,13 @@
 							  x:CompileBindings="True"
 							  Items="{Binding NoteList}"
 							  SelectedItem="{Binding SelectedNote}">
-						<interactivity:Interaction.Behaviors>
+
+                        <interactivity:Interaction.Behaviors>
 							<local:DataGridDoubleClickBehavior/>
 							<local:DataGridDragSelectionBehavior/>
 							<local:DataGridSelectedItemsBehavior SelectedItems="{Binding SelectedNotes, Mode=TwoWay}" />
 						</interactivity:Interaction.Behaviors>
+
 						<DataGrid.Columns>
 							<DataGridTemplateColumn Header="№ строки" Width="80">
 								<DataGridTemplateColumn.CellTemplate>
@@ -900,6 +907,5 @@
 				</StackPanel>
 			</Border>
 		</Expander>
-
 	</Grid>
 </Window>
