--- a/Client_App/App.axaml
+++ b/Client_App/App.axaml
@@ -2,6 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="using:Client_App"
              xmlns:resources="clr-namespace:Client_App.Resources"
+			 xmlns:i="clr-namespace:Avalonia.Xaml.Interactivity;assembly=Avalonia.Xaml.Interactivity"
+             xmlns:behaviors="clr-namespace:Client_App.Behaviors"
              x:Class="Client_App.App">
 
     <Application.DataTemplates>
@@ -75,7 +77,7 @@
 	    <!--Общие стили-->
 		
 			<!--Из-за особенностей предметной области допускается, что пользователи могут ввести вместо даты строку
-			    Поэтому buttonOnly предназначен для того чтобы упрощать пользователям ввод в обычный TextBox-->
+			    Поэтому buttonOnly предназначен для использвания в связки с другим текстбоксом -->
         <Style Selector="CalendarDatePicker.buttonOnly TextBox">
             <Setter Property="CornerRadius" Value="5"/>
             <Setter Property="IsVisible" Value="False"/>
@@ -84,6 +86,9 @@
 		<Style Selector="Border#Background">
 			<Setter Property="Background" Value="#f0f8ff"/>
         </Style>
+		<Style Selector="TextBox.autoTrim">
+			<Setter Property="behaviors:TextBoxAutoTrim.IsEnabled" Value="True"/>
+		</Style>
         <!--Стили для окон редактирования форм-->
         <!--Header-->
         <Style Selector="CheckBox.hideButton">
